rnsc/test_data/rns_integration/error/parser/method_directive/trailing_tokens_recovers.rns
; Tests that parser continues after trailing tokens error and reports subsequent errors
; Expected errors: E-015 (trailing tokens), E-007 (unknown token)

.class public MyClass
.super java/lang/Object

.method public static main([Ljava/lang/String;)V trailing_tokens

     unknown_token ; <- still reported after recovery

.class_end
